--- a/sermons/Revelation1:4.tex
+++ b/sermons/Revelation1:4.tex
@@ -7,6 +7,9 @@
 \part*{Revelation 1:4 --- Grace and Peace from God, Part 1}
 \tableofcontents
 \BI
+\section*{Notes}
+\I  Remember to focus on...
+
 \section*{Introduction}
 \I Review v. 1-3:
 \BI \I  Person of Revelation: Jesus Christ,
@@ -47,22 +50,99 @@
 \BI \I  That is to say Revelation is grace and peace to us because it points us to God. \EI
 \I  And so our most dire need is to know God, worship God, and obey God.
 \BI \I  John immediately gives us help in this passage by showing us who God is. \EI
+\I Our problem is that our ``god'' is too small.
 
 \section{The source of grace and peace}
 \I  The source of grace and peace is the triune God.
 \I  We will focus on the Father
 \BI \I  The phrase ``Him who is and who was and who is to come'' is unique to Revelation.
     \I  Pregnant with meaning and endless in glory. \EI
-\I  That God is ``Him who is nad who was and who is to come'' means
+\I  That God is ``Him who is and who was and who is to come'' means
 \BI \I  that He is eternal,
     \I  that He is transcendent,
     \I  that He is self-existent. \EI
 
 \subsection{God is eternal}
 \I  That is, He is eternally existent, He lives forever.
-\BI \I    
+\BI \I  ``who was'' stretches infinitely into the past,
+    \I  ``who is to come'' stretches infinitely into the future, and
+    \I  ''who is'' covers every moment in-between. \EI
+\I  And so the psalmist cries out in Psalm 90:2 \Q{Even from everlasting to everlasting, You are God.}
+\I  And it is because He is eternal that God can say in Revelation 1:8
+    \Q{``I am the Alpha and the Omega, the Beginning and the End,''
+        says the Lord, ``who is and who was and who is to come, the Almighty.''}
+\BI \I  Nothing and noone can exist before or after Him. \EI
+
+\I  Hand-in-hand with His eternality is that God is self-existent.
+\BI \I  If no one is before you, then there is nothing to support you.
+    \I  God simply \emph{is}. He is the self-existent One. \EI
+\I  This is what was revealed to Moses in Exodus 3:14 
+    \Q{And God said to Moses, ``I AM WHO I AM.'' And He said, 
+    ``Thus you shall say to the children of Israel, `I AM has sent me to you.' ''}
+\I  Colossians 1:17 shows us that God is both eternal and self existent
+    \Q{And He is before all things, and in Him all things consist.}
+\BI \I  He is the only truly independent One,
+    \I  Everything else depends on Him who is and who was and who is to come. \EI
+\I  This is our great God, the eternal One from whom we receive grace and peace.
+
 \subsection{God is transcendent}
+\I  Not just that He stretches across all time and eternity,
+    but that He is exalted above and beyond time itself.
+\I  To explain this, imagine that we had a string that represented all of time.
+\BI \I  That God is Him who is and who was and who is to come is not only that He is encompasses all of time and eternity,
+        but that He utterly transcends time.
+    \I  In other words, He is not just a thread that runs the length, and beyond, of the string,
+        but He is even the One who upholds the string. 
+    \I  He is outside (or transcendent above) time. \EI
+\I  James 1:17 \Q{\ldots with whom there is no variation or shadow of turning.}
+\I  Hebrews 13:8 \Q{Jesus Christ is the same yesterday, today, and forever.}
+\BI \I  Which does not simply mean that He passes through time without changing.
+    \I  No, He is outside of time.
+    \I  He stays the same because when we encounter Him, we are meeting One who transcends time itself. \EI
+\I  We are meeting Him who is and who was and who is to come,
+\BI \I  the eternal One, and
+    \I  the One who transcends time. \EI
+\I  The One who is outside of time and therefore the psalmist declares in Psalm 139:16
+    \Q{Your eyes saw my substance, being yet unformed. \\
+        And in Your book they all were written, \\
+        The days fashioned for me, \\
+        When as yet there were none of them.}
+\BI \I  Who else can say such things? \EI
+\I  A profound example of God's transcendence above time is found in John 8:58
+    \Q{Jesus said to them, ``Most assuredly, I say to you, before Abraham was, I AM.''}
+\BI \I  Not I was but I \emph{AM}.
+    \I  We could say that God is He who at this moment 
+    \BI \I  \emph{is} right now,
+        \I  \emph{is} in the past,
+        \I  \emph{is} in the future. \EI
+        \EI
+\I  Revelation 13:8 describes Jesus as
+    \Q{\ldots the Lamb slain from the foundation of the world.}
+    which really only makes sense for a God who transcends time.
+
+
+
 \subsection{God is present}
+\I  The title ``Him who is and who was and who is to come'' above accenting God's eternality and transcendence,
+    highlights his presence.
+\BI \I  Note that it does not say, ``who exists and who existed and who will exist''
+    \I  The emphasis is that ``He is'', that He is present. \EI
+\I  Although He transcends time, He is not removed from it, or out of contact with it.
+\BI \I  On the contrary, He is fully present at every point in space and time. \EI
+\I  The apostle Paul says this is Acts 17:27-28
+    \Q{\ldots He is not far from each one of us; for in Him we live and move and have our being, \ldots}
+\I  Psalm 139:8
+    \Q{If I ascend to heaven, You are there, \\ If I make my bed in hell, behold, You are there;}
+\BI \I  Not just that You know I'm there, but that You Yourself are there. \EI
+\I How is this possible? God is infinite
+\BI \I  Jeremiah 23:24 \Q{``Do I not fill heaven and earth?'' says the Lord.}
+    \I  1 Kings 8:27    \Q{But will God indeed dwell on the earth? Behold, heaven and the heaven of heavens cannot contain You.
+                How much less this temple which I have built!} 
+    \I There is no distance between us and God. \EI
+
+\I Revelation 14:10 \Q{He shall be tormented with fire and brimstone in the presence of the holy angels and in the presence of the Lamb.}
+\I  Revelation 21:3 \Q{\ldots He will dwell with them, and they shall be His people. God Himself will be with them and be their God.}
+
 \EI
 
 \end{document}
