Added Psalm 1 notes.

--- a/scribblings/plan.tex
+++ b/scribblings/plan.tex
@@ -34,11 +34,11 @@
         into field and structure sub-problems,
         which can be tackled separately and in a modular fashion
         by using various
-        \emph{optimization paradigms} and 
+        \emph{optimization strategies} and 
         \emph{structure parameterizations}
         interchangeably.
 
-    Specifically, the available optimization paradigms are
+    Specifically, the available optimization strategies are
     \BI adjoint
     \I  ob-1    \EI
     and the available structure parameterizations include
