--- a/sandbox/pb_template/pbt.tex
+++ b/sandbox/pb_template/pbt.tex
@@ -12,7 +12,7 @@
 \begin{document}
 \subsection*{Notes}
 \pagebreak
-\section*{Providence Bible Church Prayer Bulletin}
+\section*{Providence Bible Church \\Prayer Bulletin}
 \Q{ Our Father in Heaven, \\
     Hallowed be Your name. \\
     Your kingdom come. \\
