--- a/sermons/Luke9:23-26.tex
+++ b/sermons/Luke9:23-26.tex
@@ -152,15 +152,33 @@
             \Q{ Be faithful until death, and I will give you the crown of life.} \EI
 \EI
 
-\ldots and follow Me.
-\I  The conditions must be met before salvation and discipleship start.
+\I  ``\ldots and follow Me.''
+\BI \I  These terms are universal. 
+        No one gets into God's kingdom without first submitting to these terms. 
+    \I  They are Jesus' prerequisite to becoming His disciple.
+    \I  And these are the terms you agreed to when 
+            God saved you and imputed His Son's righteousness on your behalf
+            if you are a true disciple of the Lord Jesus Christ. \EI
 
-\subsection{The principle}
-For whoever desires to save his life will lost it, \ldots
+\subsection{The disciple's treasure}
+\I  Now you may be wondering where the good news is,
+        and it is in verse 24.
+\Q{ For whoever desires to save his life will lose it,
+    but whoever loses his life for My sake will save it.}
+\I  ``For'' means that Jesus is explaining the previous verse.
+    He is giving the principle that undergirds verse 23.
+\I  He explains this principle from both a negative and positive
+        perspective.
+\I  Jesus starts with the negative,
+    ``For whoever desires to save his life will lose it,''
+\BI \I  This is the one who was unwilling to surrender his life 
+            to serve Jesus.
+    \I  Instead, he desired to save it, 
+    \EI
+
 \I  Note that no one can actually save their own life, 
         they can only desire/attempt to.
 
-\ldots but whoever loses his life for My sake will save it.
 \I  It must be for His sake!
 
 \subsection{The reasoning}
