--- a/sermons/Luke9:23-26.tex
+++ b/sermons/Luke9:23-26.tex
@@ -169,29 +169,88 @@
     He is giving the principle that undergirds verse 23.
 \I  He explains this principle from both a negative and positive
         perspective.
+
 \I  Jesus starts with the negative,
-    ``For whoever desires to save his life will lose it,''
-\BI \I  This is the one who was unwilling to surrender his life 
-            to serve Jesus.
-    \I  Instead, he desired to save it, 
+    ``For whoever desires to save his life will lose it,\ldots''
+\BI \I  Here, Jesus describes the one who, 
+            upon hearing the terms of discipleship,
+            no longer desires to be His disciple.
+    \I  He is unwilling to surrender his life to serve Jesus.
+    \I  Instead, this one desires to save his life.
+    \BI \I  To use his time to pursue his own goals and to do his own will. 
+        \I  Note the vanity of such a pursuit, that he cannot succeed in it,
+                but he can only \emph{desire} to save his life. \EI
+    \I  Instead, his end is that he loses the very life 
+            he was attempting to save.
+    \BI \I  Everything he gathered in this life is scattered upon his death, and
+        \I  he now experiences eternal judgement in hell. \EI
     \EI
 
-\I  Note that no one can actually save their own life, 
-        they can only desire/attempt to.
+\I  Jesus then explains the positive, 
+        ``\dots but whoever loses his life for My sake will save it.''
+\BI \I  This is the one who agrees to Jesus' terms of unconditional 
+            surrender and unconditional service.
+    \I  He loses his life because he has denied himself and 
+            has instead taken up a cross.
+    \BI \I  He may no longer please himself, or
+                even decide how to live.
+        \I  However, note that he has not simply thrown his life away,
+                but he has lost if \emph{for Jesus' sake}. \EI  
+    \I  His outcome is salvation and eternal life. \EI
 
-\I  It must be for His sake!
+\I  This answers the question of why someone would
+\BI \I  deny themselves,
+    \I  take up their cross, and
+    \I  lose their lives, \EI
+    to follow Jesus.
 
-\subsection{The reasoning}
-For what profit is it to a man if he gains the whole world,
-    and is himself destroyed or lost?
-\I  We sacrifice only what we would inevitably lose anyways. 
-    We make no \emph{true} sacrifice.
+\I  It is all in order to gain eternal life!
+\BI \I  In fact, their sacrifice was never truly a sacrifice
+            because of the surpassing value of the treasure
+            they received in return. \EI
 
-For whoever is ashamed of Me and My words,
-    of him the Son of Man will be ashamed when He comes in His own glory,
-    and in His Father's, and of the holy angels.
+\I  Was this not true of you?
+\BI \I  At the point of your salvation,
+            what drove you to renounce all that you were,
+            and to submissively commit yourself to all that Jesus
+            would have for you?
+    \I  Was it not because you were overwhelmed by the value of
+            salvation, so that your loss seemed very small indeed?
+    \I  Were you not willing, because of the riches of the treasure,
+            to part with all that you had in order to obtain it? \EI
 
-\section{The power of brotherly love}
+\I  The believer is empowered to deny himself by
+        beholding the surpassing riches of God's promised blessing.
+\BI \I  It is the greatness, extravagance, and sureness,
+            of God's promise that empowers the believer to
+            follow and obey! \EI
+
+\I  And if so at the moment of salvation,
+        should not it be ever more so after salvation?
+
+\section{The power to love}
+\I  Yes! Just as the power to deny ourselves and take up our cross was in
+        the promise of eternal life,
+        so the power to deny ourselves and obediently love one another now
+        lies in \emph{the promise of eternal life now}.
+
+\I  Remember, eternal life is not simply living forever, it is fellowship with God.
+\BI \I John 17:3
+        \Q{ And this is eternal life, that they may know You, 
+            the only true God, and Jesus Christ whom You have sent.} 
+    \I  Heaven is knowing God without any sin in the way! \EI
+        
+\I  Therefore, what empowers a believer unto obedience is 
+        the blessing of a deeper and fuller communion with God.
+\BI \I  Or, the believer obeys in order to 
+            more richly experience eternal life \emph{now}. \EI
+
+\I  Philippians 3:8
+    \Q{ Yet indeed I also count all things loss for the excellence
+            of the knowledge of Christ Jesus my Lord,
+            and count them as rubbish, that I may gain Christ \ldots}
+
+
 
 \EI
 
