--- a/sermons/Luke9:23-26.tex
+++ b/sermons/Luke9:23-26.tex
@@ -250,7 +250,23 @@
             of the knowledge of Christ Jesus my Lord,
             and count them as rubbish, that I may gain Christ \ldots}
 
+\I  Jeremiah 9:23-24, man's greatest glory
+    \Q{ Thus says the LORD: "Let not the wise man glory in his wisdom, 
+        let not the mighty man glory in his might, 
+        nor let the rich man glory in his riches; 
+        but let him who glories glory in this, 
+        that he understands and knows Me, 
+        That I am the LORD, exercising lovingkindness, judgment, 
+        and righteousness in the earth. For in these I delight," says the LORD.}
 
+\I  Ephesians 4:13, the goal of the Church
+    \Q{ And He Himself gave some to be apostles, some prophets, 
+        some evangelists, and some pastors and teachers, 
+        for the equipping of the saints for the work of ministry, 
+        for the edifying of the body of Christ, till we all come 
+            to the unity of the faith 
+        and of the knowledge of the Son of God, to a perfect man, 
+        to the measure of the stature of the fullness of Christ; \ldots}
 
 \EI
 
