--- a/sermons/Luke9:23-26.tex
+++ b/sermons/Luke9:23-26.tex
@@ -243,7 +243,10 @@
 \I  Therefore, what empowers a believer unto obedience is 
         the blessing of a deeper and fuller communion with God.
 \BI \I  Or, the believer obeys in order to 
-            more richly experience eternal life \emph{now}. \EI
+            more richly experience eternal life \emph{now}. 
+    \I  He is unwilling to let any sin keep him from communing with God, and
+    \I  He is willing to fulfill every command in order to experience
+            the blessing of full communion with God. \EI
 
 \I  Philippians 3:8
     \Q{ Yet indeed I also count all things loss for the excellence
@@ -268,6 +271,9 @@
         and of the knowledge of the Son of God, to a perfect man, 
         to the measure of the stature of the fullness of Christ; \ldots}
 
+\I  This is why it's so important to see God for who He is.
+
+\I  Go back to beginning three verses.
 \EI
 
 \end{document}
