--- a/resume/res1.tex
+++ b/resume/res1.tex
@@ -14,7 +14,7 @@
 \begin{resume}
 
 \section{JOB OBJECTIVE}          
-    A full-time position in COMPANY with starting date of November 2012 
+    A full-time position with starting date of January 2013.
     (upon completion of doctoral degree).
 
 \section{EDUCATION}          
