--- a/sermons/Revelation1:4b.tex
+++ b/sermons/Revelation1:4b.tex
@@ -116,7 +116,24 @@
     \I  that He is deserving of an eternity of worship. \EI
 \I  It also means that if we were to study the Holy Spirit, 
     there would always be more to learn, and experience of Him.
-\I  Show that He is all-capable in the salvation and sanctification of the believer.
+\I  His perfection is manifest in that He provides virtually all that
+    we need as believers
+\BI \I  Titus 3:5, by the Spirit we experience the new birth (regeneration).
+        \Q{ \ldots but according to His mercy He saved us,
+            through the washing of regeneration and renewing of the Holy Spirit,
+            \ldots}
+    \I  Romans 8:16, the Spirit gives us assurance of our salvation.
+        \Q{The Spirit Himself bears witness with our spirit that we are children
+            of God, \ldots}
+    \I  Romans 8:13, by the Spirit we have victory of sin.
+        \Q{ \ldots but if by the Spirit you put to death the deeds of the body,
+            you will live}
+    \I  Galatians 5:22, the Spirit sanctifies us.
+        \Q{ But the fruit of the Spirit is love, joy, peace, longsuffering,
+            kindness, goodness, faithfulness, gentleness, self-control.}
+    \I  Romans 8:26, the Spirit intercedes for us.
+        \Q{ \ldots the Spirit Himself makes intercession for us with 
+            groanings which cannot be uttered.} \EI
 
 \subsection{His submission}
 \I  The Bible shows that the seven-fold Spirit of God is equal in person to 
@@ -146,7 +163,7 @@
         as Galatians 4:6 says,
         \Q{ And because you are sons, God has sent forth the Spirit of His Son
             into your hearts, crying out, ``Abba, Father!''}
-        The Holy Spirit does not direct us to worship Him, but the Father. \EI
+        The Holy Spirit does not direct us to worship Himself, but the Father. \EI
 
 \subsection{His ministry}
 \I  Revelation not only reveals the submissiveness of the Spirit
@@ -197,13 +214,35 @@
             for He will take of what is Mine and declare it to you.} \EI
         
 
-        
-            
-
-
 \section{Application -- How it matters}
 \subsection{The Spirit indwells the believer}
+\I  The Spirit indwells us, Colossian 1:27
+    \Q{To them God willed to make known what are the riches of the glory
+        of this mystery among the Gentiles: which is Christ in you,
+        the hope of glory.}
+\I  What does this mean
+\BI \I  Not physically, He is spirit after all.
+    \I  It is that the Spirit interacts and works through our
+        thoughts, attitudes and emotions.
+        He works at the core of our being.
+    \I  God is not simply making all things work together for our good
+        through external means.
+    \I  But the Spirit is directing our hearts and shaping our minds 
+        to bring us comfort and strengthen us within. \EI
+\I  Our greatest comfort and strength
+\BI \I  It assures us of His love for us, Ephesians 1:13-14
+        \Q{ In Him you also trusted, after you heard the word of truth,
+            the gospel of our salvation; in whom also,
+            having believed, you were sealed with the Holy Spirit of promise,
+            who is a guarantee of our inheritance until the redemption
+            of the purchased possession, to the praise of His glory.}
+        We will never be vanquished by an outside foe.
+    \I  It assures us that  \EI
+
 \subsection{Be filled with the Spirit}
+\I  Ephesians 4:18 
+    \Q{ And do not be drunk with wine, in which is dissipation;
+        but be filled with the Spirit.}
 \EI
 
 \end{document}
