Fixed typos in intro.

--- a/presentations/meta_book/Inverse_Methods.tex
+++ b/presentations/meta_book/Inverse_Methods.tex
@@ -195,12 +195,12 @@ One of the strengths of this approach is that it recasts
     the optimization problem into separably convex problems
     whose global optima can be reliably determined.  
 Additionally, we show that our formulation is general enough 
-    to encompasses the design of all linear nanophotonic structures 
+    to encompass the design of all linear nanophotonic structures 
     and is not limited to the design of optical metamaterials.
-While this approach typically produces designs with very efficiencies 
-    (typically 99/%)
-    our solutions rely on continuously varying values of the dielectric constant 
-    with respect to position across the optical structure being designed.  
+While this approach typically produces designs with very high efficiencies 
+    (typically 99\%)
+    our solutions do feature continuously varying values of the 
+    dielectric constant.
 Future approaches for dealing with this constraint are discussed 
     in Section \ref{sec:binary}.
 
