Format of group presentation set.

--- a/presentations/maxwell_documentation/pres.tex
+++ b/presentations/maxwell_documentation/pres.tex
@@ -20,17 +20,16 @@
 
 \BIT \itemsep -1pt
 \item Quick-start
-\item How Maxwell works
-\item How the frequency-domain solver works
+\item How Maxwell uses the cloud (EC2)
+\item How Maxwell solves electromagnetics
 \item Examples
 \EIT
 
 \vfill
 
-\oursection{Problem Statement}
-% \oursection{Plan}
-% \BIT
-% \item Software to solve $A^{-1}z$.
-% \item Adjoint
-% \EIT
+\oursection{Quick-start}
+\oursection{How Maxwell uses the cloud (EC2)}
+\oursection{How Maxwell solves electromagnetics}
+\oursection{Examples}
+
 \end{document}
