--- a/presentations/maxwell_documentation/defs.tex
+++ b/presentations/maxwell_documentation/defs.tex
@@ -10,6 +10,7 @@
 \newcommand{\BEQ}{\begin{equation}}
 \newcommand{\EEQ}{\end{equation}}
 \newcommand{\BIT}{\begin{itemize}}
+\newcommand{\I}{\item}
 \newcommand{\EIT}{\end{itemize}}
 
 \newcommand{\eg}{{\it e.g.}}
